objects/FieloEE__PromotionRule__c.object
<CustomObject>
    <description>The rules for each promotion.</description>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Promotion__c</fullName>
        <description>Promotion - Master object in this relation</description>
        <label>Promotion</label>
        <referenceTo>FieloEE__Promotion__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>PromotionRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Rule__c</fullName>
        <description>Rule that belongs to the promotion</description>
        <label>Rule</label>
        <referenceTo>FieloEE__Rule__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>PromotionsRules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promotion Rule</label>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>